# cpp-2022

./: CMakeLists.txt
lab01/: functions.cpp  functions.h  main_01.cpp
lab02/: CMakeLists.txt  Point.cpp  Point.h  main_02.cpp  util.cpp  util.h
lab03/: CMakeLists.txt  list.cpp  list.h  main_03.cpp  stack.cpp  stack.h
lab04/: CMakeLists.txt  Point.cpp  Point.h  PointSet.cpp  PointSet.h  main_04.cpp
lab05/: CMakeLists.txt  Matrix.cpp  Matrix.h  main_05.cpp
lab06/: CMakeLists.txt  Polynomial.cpp  Polynomial.h  main_06.cpp
lab08/: main_08.cpp
lab09/: Alkalmazott.cpp  Alkalmazott.h  CMakeLists.txt  Ceg.cpp  Ceg.h  Manager.cpp  Manager.h  Szemely.cpp  Szemely.h  main_09.cpp
lab10/: CMakeLists.txt  OrderedList.h  main_10.cpp
lab11/: CMakeLists.txt  Index.cpp  Index.h  input.txt  main_11.cpp
lab12/: CMakeLists.txt  GraduationDao.h  GraduationDaoImpl.cpp  GraduationDaoImpl.h  GraduationService.h  GraduationServiceImpl.cpp  GraduationServiceImpl.h  Settlement.cpp  Settlement.h  SettlementStatistics.h  SettlementStatisticsImpl.cpp  SettlementStatisticsImpl.h  Student.cpp  Student.h  main_12.cpp
lab13/: CMakeLists.txt  Huffman.cpp  Huffman.h  main_13.cpp  myifstream.cpp  myifstream.h
