project(lab12)
add_executable(lab12 main_12.cpp Student.h Student.cpp GraduationDao.h GraduationDaoImpl.h GraduationDaoImpl.cpp GraduationService.h GraduationServiceImpl.h GraduationServiceImpl.cpp Settlement.h Settlement.cpp SettlementStatisticsImpl.cpp SettlementStatisticsImpl.h SettlementStatistics.h)
